add database containers configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=tech-challenge-5-shopping-cart
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username =${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:123123}
+spring.datasource.url =${DB_URL:jdbc:postgresql://localhost:5434/shoppingcartdb}
+spring.jpa.hibernate.show-sql=true
+
+# Options: none | validate | update | create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
