add server configuration to use port 8082

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=tech-challenge-5-shopping-cart
 
+server.port=8082
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username =${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:123123}
