add user verification during item additions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.hibernate.show-sql=true
 
 # Options: none | validate | update | create-drop
 spring.jpa.hibernate.ddl-auto=create-drop
+
+api.client.credentials.url=${CREDENTIALS_URL:http://localhost:8080}
