add feign client for items microservice communication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.hibernate.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 api.client.credentials.url=${CREDENTIALS_URL:http://localhost:8080}
+api.client.items.url=${ITEMS_URL:http://localhost:8081}
