--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 api.client.credentials.url=${CREDENTIALS_URL:http://localhost:8080}
 api.client.items.url=${ITEMS_URL:http://localhost:8081}
+
+api.security.token.secret=${JWT_SECRET:secret}
