--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,18 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>6.3.3</version>
 		</dependency>
+		
+    	<dependency>
+        	<groupId>org.mockito</groupId>
+        	<artifactId>mockito-core</artifactId>
+        	<scope>test</scope>
+    	</dependency>
+		<dependency>
+        	<groupId>com.h2database</groupId>
+        	<artifactId>h2</artifactId>
+        	<scope>runtime</scope>
+    	</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
