add whole api documentation with swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ api.client.credentials.url=${CREDENTIALS_URL:http://localhost:8080}
 api.client.items.url=${ITEMS_URL:http://localhost:8081}
 
 api.security.token.secret=${JWT_SECRET:secret}
+
+springdoc.swagger-ui.path=/doc
