update ddl auto config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,7 @@ spring.datasource.password=${DB_PASSWORD:123123}
 spring.datasource.url =${DB_URL:jdbc:postgresql://localhost:5434/shoppingcartdb}
 spring.jpa.hibernate.show-sql=true
 
-# Options: none | validate | update | create-drop
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 
 api.client.credentials.url=${CREDENTIALS_URL:http://localhost:8080}
 api.client.items.url=${ITEMS_URL:http://localhost:8081}
